Added Demonite tools (including sword) and block.
May tinker with the Demonite tool tier but right now it is like the iron tools but with better stats (durability, speed, damage).

Also did some cleanup.

--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -160,6 +160,11 @@
   "item.terramine.lava_waders": "Lava Waders",
   "item.terramine.water_walking_boots": "Water Walking Boots",
   "item.terramine.obsidian_water_walking_boots": "Obsidian Water Walking Boots",
+  "item.terramine.demonite_pickaxe": "Demonite Pickaxe",
+  "item.terramine.demonite_sword": "Demonite Sword",
+  "item.terramine.demonite_axe": "Demonite Axe",
+  "item.terramine.demonite_shovel": "Demonite Shovel",
+  "item.terramine.demonite_hoe": "Demonite Hoe",
   "item.terramine.diving_helmet.tooltip": "Greatly extends underwater breathing",
   "item.terramine.diving_gear.tooltip": "Grants the ability to swim better\nGreatly extends underwater breathing",
   "item.terramine.panic_necklace.tooltip": "Increases movement speed after taking damage",
@@ -348,6 +353,7 @@
   "block.terramine.corrupted_ice": "Corrupted Ice",
   "block.terramine.corrupted_packed_ice": "Corrupted Packed Ice",
   "block.terramine.corrupted_blue_ice": "Corrupted \"Blue\" Ice",
+  "block.terramine.demonite_block": "Block of Demonite",
   "biome.terramine.corruption": "The Corruption",
   "biome.terramine.corruption.color": "bc48ff",
   "biome.terramine.corruption_desert": "The Corruption Desert",
