Added raw demonite block (uses the texture for the demonite block, that now has a different texture).
Added craft to turn blocks back into their craft components (ingots and raw).

Demonite can now also be used to activate beacons (doesn't show that it can, but that's because Mojang hard coded the menu, shows that it can in rei though).

Thinking of adding more entities, having only the Demon Eyes is a bit sad, so I will try to add a bunch of entities for the next major update (maybe even a boss?).

--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -353,6 +353,7 @@
   "block.terramine.corrupted_ice": "Corrupted Ice",
   "block.terramine.corrupted_packed_ice": "Corrupted Packed Ice",
   "block.terramine.corrupted_blue_ice": "Corrupted \"Blue\" Ice",
+  "block.terramine.raw_demonite_block": "Block of Raw Demonite",
   "block.terramine.demonite_block": "Block of Demonite",
   "biome.terramine.corruption": "The Corruption",
   "biome.terramine.corruption.color": "bc48ff",
