Fixed sand and gravel disks generating on surface of corruption biomes (I think this has been happening since the 1.19 update, and I guess I just never noticed).
A bit of cleanup in various places.

--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -35,7 +35,7 @@
   "terramine.advancements.dead_men_tell_no_tales.title": "Dead Men Tell No Tales",
   "terramine.advancements.dead_men_tell_no_tales.description": "You were so preoccupied with whether or not you could open the chest that you didn't stop to think if you should",
   "terramine.advancements.dungeon_crawler.title": "Dungeon Crawler",
-  "terramine.advancements.dungeon_crawler.description": "Find a Dungeon, I wonder what's inside?",
+  "terramine.advancements.dungeon_crawler.description": "I wonder what's inside?",
   "terramine.advancements.i_am_loot.title": "I Am Loot!",
   "terramine.advancements.i_am_loot.description": "Discover a golden chest underground and take a peek at its contents",
   "terramine.advancements.prismancer.title": "Prismancer",
