Added Eater of Souls (still wip, works like the demon eyes right now but won't fly away during the day). Eater of Souls now spawns in the Corruption biomes (vanilla mobs will no longer spawn in Corruption biomes, this may change).
Fixed flickering on Demon Eyes veins (The Eater of Souls also had flickering, so I fixed it)

Added more Creative mode tabs.

Did some organising, just makes things easier to find.

The Eater of Souls probably doesn't need much changing, I'm not sure about the model but my modelling skills aren't great, so it will do for now. After that's done I want to try and make the Devourer, have to find a way to connect multiple entities together for that. Then I want to try and get the Eye of Cthulhu and Eater of Worlds done, both shouldn't be too difficult I hope.

--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -25,7 +25,10 @@
   "terramine.ui.waxingGibbousMoon": "Waxing Gibbous",
   "terramine.ui.unknownMoonPhase": "Unknown Phase",
   "terramine.ui.speed": "Speed",
-  "itemGroup.terramine.item_group": "TerraMine",
+  "itemGroup.terramine.item_group_equipment": "TerraMine Equipment",
+  "itemGroup.terramine.item_group_accessories": "TerraMine Accessories",
+  "itemGroup.terramine.item_group_blocks": "TerraMine Blocks",
+  "itemGroup.terramine.item_group_stuff": "TerraMine Misc",
   "terramine.advancements.root.title": "TerraMine",
   "terramine.advancements.root.description": "Familiar yet different",
   "terramine.advancements.accessorise.title": "Accessorise",
@@ -62,6 +65,7 @@
   "entity.minecraft.villager.goblin_tinkerer": "Goblin Tinkerer",
   "item.terramine.mimic_spawn_egg": "Mimic Spawn Egg",
   "item.terramine.demon_eye_spawn_egg": "Demon Eye Spawn Egg",
+  "item.terramine.eater_of_souls_spawn_egg": "Eater of Souls Spawn Egg",
   "item.terramine.lens": "Lens",
   "item.terramine.black_lens": "Black Lens",
   "item.terramine.diving_helmet": "Diving Helmet",
