Added Crimson Biomes. Very WIP, the biome hasn't even really been started yet, but I wanted to figure out how to only have one type of evil in a world (which I got working), so I needed the biome to test that.
Renamed corruption config options to evil as those options will work on both the Corruption and Crimson Biomes.

--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -390,13 +390,13 @@
   "text.autoconfig.terramine.option.general.showTooltips.@Tooltip[1]": "effect. These can still be found in REI when disabled",
   "text.autoconfig.terramine.option.general.stopwatchMPH": "Stopwatch MPH",
   "text.autoconfig.terramine.option.general.stopwatchMPH.@Tooltip": "Sets the Stopwatch to use mph instead of km/h",
-  "text.autoconfig.terramine.option.general.disableCorruptionSpread": "Disable Corruption Spread",
-  "text.autoconfig.terramine.option.general.disableCorruptionSpread.@Tooltip[0]": "Disables the spread of the Corruption Biome",
-  "text.autoconfig.terramine.option.general.disableCorruptionSpread.@Tooltip[1]": "Corruption blocks will no longer spread",
-  "text.autoconfig.terramine.option.general.disableCorruptionSpread.@Tooltip[2]": "Use this for big servers to reduce world lag",
-  "text.autoconfig.terramine.option.general.corruptionSpreadRarity": "Corruption Spread Rarity",
-  "text.autoconfig.terramine.option.general.corruptionSpreadRarity.@Tooltip[0]": "How rarely Corruption blocks spread",
-  "text.autoconfig.terramine.option.general.corruptionSpreadRarity.@Tooltip[1]": "The higher the value the slower the Corruption spreads",
+  "text.autoconfig.terramine.option.general.disableEvilSpread": "Disable Evil Biome Spread",
+  "text.autoconfig.terramine.option.general.disableEvilSpread.@Tooltip[0]": "Disables the spread of the worlds evil biome",
+  "text.autoconfig.terramine.option.general.disableEvilSpread.@Tooltip[1]": "Evil type blocks will no longer spread",
+  "text.autoconfig.terramine.option.general.disableEvilSpread.@Tooltip[2]": "Use this for big servers to reduce world lag",
+  "text.autoconfig.terramine.option.general.evilSpreadRarity": "Evil Spread Rarity",
+  "text.autoconfig.terramine.option.general.evilSpreadRarity.@Tooltip[0]": "How rarely evil type blocks spread",
+  "text.autoconfig.terramine.option.general.evilSpreadRarity.@Tooltip[1]": "The higher the value the slower the evil spreads",
   "text.autoconfig.terramine.option.general.disableFallingStars": "Disable Falling Stars",
   "text.autoconfig.terramine.option.general.disableFallingStars.@Tooltip": "Disables Falling Stars from randomly falling",
   "text.autoconfig.terramine.option.general.fallingStarRarity": "Falling Star Rarity",
@@ -410,8 +410,8 @@
   "text.autoconfig.terramine.option.worldgen.accessoryRarity.@Tooltip[3]": "Doubling this value will (roughly) halve the chance a container contains an accessory",
   "text.autoconfig.terramine.option.worldgen.accessoryRarity.@Tooltip[4]": "Setting this to 10000 will completely prevent terramine from spawning",
   "text.autoconfig.terramine.option.worldgen.accessoryRarity.@Tooltip[5]": "When set to 0, every container that can contain terramine will contain an accessory",
-  "text.autoconfig.terramine.option.worldgen.corruptionEnabled": "Enable Corruption",
-  "text.autoconfig.terramine.option.worldgen.corruptionEnabled.@Tooltip": "Enables or Disables the Corruption biomes",
+  "text.autoconfig.terramine.option.worldgen.evilBiomeEnabled": "Enable Evil Biomes",
+  "text.autoconfig.terramine.option.worldgen.evilBiomeEnabled.@Tooltip": "Enables or Disables the Evil biomes from generating",
   "text.autoconfig.terramine.option.worldgen.caveChest": "Cave Chests",
   "text.autoconfig.terramine.option.worldgen.caveChest.chestRarity": "Chest rarity",
   "text.autoconfig.terramine.option.worldgen.caveChest.chestRarity.@Tooltip[0]": "A higher number means less frequent generation",
