Added Philosopher's Stone and Charm of Myths.
Because minecraft doesn't have potion sickness I decided instead that the duration of beneficial effect would be increased by 25%, maybe I'll add potion sickness but healing potions in minecraft already have a small delay and aren't really that useful, so I don't want to make them even less useful.

Probably going to make the Demonite Armour next and then work on the Crimson and get that caught up to the Corruption.

--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -105,6 +105,8 @@
   "item.terramine.power_glove": "Power Glove",
   "item.terramine.mechanical_glove": "Mechanical Glove",
   "item.terramine.band_of_regeneration": "Band of Regeneration",
+  "item.terramine.philosophers_stone": "Philosopher's Stone",
+  "item.terramine.charm_of_myths": "Charm of Myths",
   "item.terramine.band_of_starpower": "Band of Starpower",
   "item.terramine.mana_regeneration_band": "Mana Regeneration Band",
   "item.terramine.magic_cuffs": "Magic Cuffs",
@@ -205,6 +207,8 @@
   "item.terramine.power_glove.tooltip": "Increases melee knockback\n12%% increased melee speed\nEnables auto swing for melee weapons\nIncreases the size of melee weapons",
   "item.terramine.mechanical_glove.tooltip": "Increases melee knockback\n12%% increased melee damage and speed\nEnables auto swing for melee weapons\nIncreases the size of melee weapons",
   "item.terramine.band_of_regeneration.tooltip": "Slowly regenerates life",
+  "item.terramine.philosophers_stone.tooltip": "Increases the duration of beneficial potion effects by 25%%",
+  "item.terramine.charm_of_myths.tooltip": "Provides life regeneration and increases the duration of beneficial potion effects by 25%%",
   "item.terramine.band_of_starpower.tooltip": "Increases maximum mana by 20",
   "item.terramine.mana_regeneration_band.tooltip": "Increases maximum mana by 20\nIncreases mana regeneration rate",
   "item.terramine.magic_cuffs.tooltip": "Increases maximum mana by 20\nRestores mana when damaged",
