--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -68,6 +68,7 @@
   "item.terramine.mimic_spawn_egg": "Mimic Spawn Egg",
   "item.terramine.demon_eye_spawn_egg": "Demon Eye Spawn Egg",
   "item.terramine.eater_of_souls_spawn_egg": "Eater of Souls Spawn Egg",
+  "item.terramine.crimera_spawn_egg": "Crimera Spawn Egg",
   "item.terramine.lens": "Lens",
   "item.terramine.black_lens": "Black Lens",
   "item.terramine.diving_helmet": "Diving Helmet",
@@ -178,6 +179,22 @@
   "item.terramine.crimtane_axe": "Crimtane Axe",
   "item.terramine.crimtane_shovel": "Crimtane Shovel",
   "item.terramine.crimtane_hoe": "Crimtane Hoe",
+  "item.terramine.demonite_helmet": "Shadow Helmet",
+  "item.terramine.demonite_chestplate": "Shadow Chestplate",
+  "item.terramine.demonite_leggings": "Shadow Leggings",
+  "item.terramine.demonite_boots": "Shadow Boots",
+  "item.terramine.crimson_helmet": "Crimson Helmet",
+  "item.terramine.crimson_chestplate": "Crimson Chestplate",
+  "item.terramine.crimson_leggings": "Crimson Leggings",
+  "item.terramine.crimson_boots": "Crimson Boots",
+  "item.terramine.demonite_helmet.tooltip": "7% increased melee speed\nSet Bonus: 15% increased movement speed",
+  "item.terramine.demonite_chestplate.tooltip": "7% increased melee speed\nSet Bonus: 15% increased movement speed",
+  "item.terramine.demonite_leggings.tooltip": "7% increased melee speed\nSet Bonus: 15% increased movement speed",
+  "item.terramine.demonite_boots.tooltip": "7% increased melee speed\nSet Bonus: 15% increased movement speed",
+  "item.terramine.crimson_helmet.tooltip": "2% increased damage\nSet Bonus: Greatly increased life regen",
+  "item.terramine.crimson_chestplate.tooltip": "2% increased damage\nSet Bonus: Greatly increased life regen",
+  "item.terramine.crimson_leggings.tooltip": "2% increased damage\nSet Bonus: Greatly increased life regen",
+  "item.terramine.crimson_boots.tooltip": "2% increased damage\nSet Bonus: Greatly increased life regen",
   "item.terramine.diving_helmet.tooltip": "Greatly extends underwater breathing",
   "item.terramine.diving_gear.tooltip": "Grants the ability to swim better\nGreatly extends underwater breathing",
   "item.terramine.panic_necklace.tooltip": "Increases movement speed after taking damage",
