Added Shadow and Crimson Armour sets. Still wip, need to get the effects working but that won't be too hard. I want to create a custom model for the helmet so that it has the horn/spikes things but I'll do that for the next update.
Fixed tools being held as flat items.

Also, added the Crimson Sword texture, does not look good, but it will do for now.

--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -26,6 +26,7 @@
   "terramine.ui.unknownMoonPhase": "Unknown Phase",
   "terramine.ui.speed": "Speed",
   "itemGroup.terramine.item_group_equipment": "TerraMine Equipment",
+  "itemGroup.terramine.item_group_armor": "TerraMine Armor",
   "itemGroup.terramine.item_group_accessories": "TerraMine Accessories",
   "itemGroup.terramine.item_group_blocks": "TerraMine Blocks",
   "itemGroup.terramine.item_group_stuff": "TerraMine Misc",
@@ -179,22 +180,24 @@
   "item.terramine.crimtane_axe": "Crimtane Axe",
   "item.terramine.crimtane_shovel": "Crimtane Shovel",
   "item.terramine.crimtane_hoe": "Crimtane Hoe",
-  "item.terramine.demonite_helmet": "Shadow Helmet",
-  "item.terramine.demonite_chestplate": "Shadow Chestplate",
-  "item.terramine.demonite_leggings": "Shadow Leggings",
-  "item.terramine.demonite_boots": "Shadow Boots",
+  "item.terramine.shadow_helmet": "Shadow Helmet",
+  "item.terramine.shadow_chestplate": "Shadow Chestplate",
+  "item.terramine.shadow_leggings": "Shadow Leggings",
+  "item.terramine.shadow_boots": "Shadow Boots",
   "item.terramine.crimson_helmet": "Crimson Helmet",
   "item.terramine.crimson_chestplate": "Crimson Chestplate",
   "item.terramine.crimson_leggings": "Crimson Leggings",
   "item.terramine.crimson_boots": "Crimson Boots",
-  "item.terramine.demonite_helmet.tooltip": "7% increased melee speed\nSet Bonus: 15% increased movement speed",
-  "item.terramine.demonite_chestplate.tooltip": "7% increased melee speed\nSet Bonus: 15% increased movement speed",
-  "item.terramine.demonite_leggings.tooltip": "7% increased melee speed\nSet Bonus: 15% increased movement speed",
-  "item.terramine.demonite_boots.tooltip": "7% increased melee speed\nSet Bonus: 15% increased movement speed",
-  "item.terramine.crimson_helmet.tooltip": "2% increased damage\nSet Bonus: Greatly increased life regen",
-  "item.terramine.crimson_chestplate.tooltip": "2% increased damage\nSet Bonus: Greatly increased life regen",
-  "item.terramine.crimson_leggings.tooltip": "2% increased damage\nSet Bonus: Greatly increased life regen",
-  "item.terramine.crimson_boots.tooltip": "2% increased damage\nSet Bonus: Greatly increased life regen",
+  "item.terramine.shadow_helmet.tooltip": "7% increased melee speed",
+  "item.terramine.shadow_chestplate.tooltip": "7% increased melee speed",
+  "item.terramine.shadow_leggings.tooltip": "7% increased melee speed",
+  "item.terramine.shadow_boots.tooltip": "7% increased melee speed",
+  "item.terramine.shadow_armor.setbonus": "Set Bonus: 15% increased movement speed",
+  "item.terramine.crimson_helmet.tooltip": "2% increased damage",
+  "item.terramine.crimson_chestplate.tooltip": "2% increased damage",
+  "item.terramine.crimson_leggings.tooltip": "2% increased damage",
+  "item.terramine.crimson_boots.tooltip": "2% increased damage",
+  "item.terramine.crimson_armor.setbonus": "Set Bonus: Greatly increased life regen",
   "item.terramine.diving_helmet.tooltip": "Greatly extends underwater breathing",
   "item.terramine.diving_gear.tooltip": "Grants the ability to swim better\nGreatly extends underwater breathing",
   "item.terramine.panic_necklace.tooltip": "Increases movement speed after taking damage",
