Added Ancient Shadow Armor. Added option to force an evil type (if forcing both can allow for both evils in a world). Added options to disable Dungeon and Cave Chests. Added Rotten Chunk and Vertebra (do nothing right now). Added support for Numismatic Overhaul (doesn't work right now because of some sort of bug with either my mod or theirs)
Some other bits of cleanup.

--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -72,6 +72,8 @@
   "item.terramine.crimera_spawn_egg": "Crimera Spawn Egg",
   "item.terramine.lens": "Lens",
   "item.terramine.black_lens": "Black Lens",
+  "item.terramine.rotten_chunk": "Rotten Chunk",
+  "item.terramine.vertebra": "Vertebra",
   "item.terramine.diving_helmet": "Diving Helmet",
   "item.terramine.diving_gear": "Diving Gear",
   "item.terramine.panic_necklace": "Panic Necklace",
@@ -184,6 +186,10 @@
   "item.terramine.shadow_chestplate": "Shadow Chestplate",
   "item.terramine.shadow_leggings": "Shadow Leggings",
   "item.terramine.shadow_boots": "Shadow Boots",
+  "item.terramine.ancient_shadow_helmet": "Ancient Shadow Helmet",
+  "item.terramine.ancient_shadow_chestplate": "Ancient Shadow Chestplate",
+  "item.terramine.ancient_shadow_leggings": "Ancient Shadow Leggings",
+  "item.terramine.ancient_shadow_boots": "Ancient Shadow Boots",
   "item.terramine.crimson_helmet": "Crimson Helmet",
   "item.terramine.crimson_chestplate": "Crimson Chestplate",
   "item.terramine.crimson_leggings": "Crimson Leggings",
@@ -192,6 +198,10 @@
   "item.terramine.shadow_chestplate.tooltip": "7% increased melee speed",
   "item.terramine.shadow_leggings.tooltip": "7% increased melee speed",
   "item.terramine.shadow_boots.tooltip": "7% increased melee speed",
+  "item.terramine.ancient_shadow_helmet.tooltip": "7% increased melee speed",
+  "item.terramine.ancient_shadow_chestplate.tooltip": "7% increased melee speed",
+  "item.terramine.ancient_shadow_leggings.tooltip": "7% increased melee speed",
+  "item.terramine.ancient_shadow_boots.tooltip": "7% increased melee speed",
   "item.terramine.shadow_armor.setbonus": "Set Bonus: 15% increased movement speed",
   "item.terramine.crimson_helmet.tooltip": "2% increased damage",
   "item.terramine.crimson_chestplate.tooltip": "2% increased damage",
@@ -205,6 +215,7 @@
   "item.terramine.obsidian_skull.tooltip": "Grants immunity to fire blocks",
   "item.terramine.fallen_star.tooltip": "Disappears after the sunrise",
   "item.terramine.fake_fallen_star.tooltip": "You shouldn't have this\nOnly used to delete after sunrise",
+  "item.terramine.rotten_chunk.tooltip": "'Looks tasty!'",
   "item.terramine.mana_crystal.tooltip": "Permanently increases maximum mana by 20",
   "item.terramine.shoe_spikes.tooltip": "Allows the ability to slide down walls\nImproved ability if combined with Climbing Claws",
   "item.terramine.climbing_claws.tooltip": "Allows the ability to slide down walls\nImproved ability if combined with Shoe Spikes",
@@ -486,7 +497,13 @@
   "text.autoconfig.terramine.option.worldgen.accessoryRarity.@Tooltip[5]": "When set to 0, every container that can contain terramine will contain an accessory",
   "text.autoconfig.terramine.option.worldgen.evilBiomeEnabled": "Enable Evil Biomes",
   "text.autoconfig.terramine.option.worldgen.evilBiomeEnabled.@Tooltip": "Enables or Disables the Evil biomes from generating",
+  "text.autoconfig.terramine.option.worldgen.forceCorruption": "Force Corruption Biomes",
+  "text.autoconfig.terramine.option.worldgen.forceCorruption.@Tooltip": "Forces the Corruption biomes to generate, this with forced Crimson can allow both evils in a single world",
+  "text.autoconfig.terramine.option.worldgen.forceCrimson": "Force Crimson Biomes",
+  "text.autoconfig.terramine.option.worldgen.forceCrimson.@Tooltip": "Forces the Crimson biomes to generate, this with forced Corruption can allow both evils in a single world",
   "text.autoconfig.terramine.option.worldgen.caveChest": "Cave Chests",
+  "text.autoconfig.terramine.option.worldgen.caveChest.disableChests": "Disable Chests",
+  "text.autoconfig.terramine.option.worldgen.caveChest.disableChests.@Tooltip": "Stops Cave, Surface, and Nether chests from generating in the world",
   "text.autoconfig.terramine.option.worldgen.caveChest.chestRarity": "Chest rarity",
   "text.autoconfig.terramine.option.worldgen.caveChest.chestRarity.@Tooltip[0]": "A higher number means less frequent generation",
   "text.autoconfig.terramine.option.worldgen.caveChest.chestRarity.@Tooltip[1]": "Also depends on the density and shape of caves",
@@ -507,8 +524,8 @@
   "text.autoconfig.terramine.option.worldgen.caveChest.deepCaveY": "Deep Cave y-level",
   "text.autoconfig.terramine.option.worldgen.caveChest.deepCaveY.@Tooltip": "Below this y-level cave chests are considered deep cave",
   "text.autoconfig.terramine.option.worldgen.structures": "Structures",
-  "text.autoconfig.terramine.option.worldgen.structures.floatingIslandHeight": "Floating Island y-level",
-  "text.autoconfig.terramine.option.worldgen.structures.floatingIslandHeight.@Tooltip": "The y-level that Floating Islands will generate at",
+  "text.autoconfig.terramine.option.worldgen.structures.disableDungeon": "Disable Dungeon",
+  "text.autoconfig.terramine.option.worldgen.structures.disableDungeon.@Tooltip": "Stops the Dungeon from generating in the world",
   "gamerule.manaRegenSpeed": "Mana Regen Speed",
   "commands.setMaxMana.pass": "Set Max Mana of %s to %s stars",
   "commands.setMaxMana.fail": "Failed to set Max Mana for that player to %s stars",
