Added new Mimic textures. Surface, Cave, Ice, and Shadow Variants.
Mimics will still be changed later, but I wanted to get the Mimic variant system done and have Hardmode used for something.

Bumped version to 1.5.1.

--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -508,8 +508,8 @@
   "text.autoconfig.terramine.option.worldgen.caveChest.chestRarity.@Tooltip[0]": "A higher number means less frequent generation",
   "text.autoconfig.terramine.option.worldgen.caveChest.chestRarity.@Tooltip[1]": "Also depends on the density and shape of caves",
   "text.autoconfig.terramine.option.worldgen.caveChest.mimicChance": "Mimic chance",
-  "text.autoconfig.terramine.option.worldgen.caveChest.mimicChance.@Tooltip[0]": "Probability for a mimic to spawn",
-  "text.autoconfig.terramine.option.worldgen.caveChest.mimicChance.@Tooltip[1]": "instead of a loot container (Currently unused)",
+  "text.autoconfig.terramine.option.worldgen.caveChest.mimicChance.@Tooltip[0]": "Probability for a mimic to spawn instead of a loot container",
+  "text.autoconfig.terramine.option.worldgen.caveChest.mimicChance.@Tooltip[1]": "A higher number means more frequent generation",
   "text.autoconfig.terramine.option.worldgen.caveChest.oreChance": "Ore vein chance",
   "text.autoconfig.terramine.option.worldgen.caveChest.oreChance.@Tooltip[0]": "Probability for an ore vein to",
   "text.autoconfig.terramine.option.worldgen.caveChest.oreChance.@Tooltip[1]": "generate underneath cave chest",
