Added Devourer (Heavy WIP, needs a lot of work). ReAdded Corruption (and now Crimson) Spread.
Evil biome spread now works correctly, it actually sets the biome so unlike the old broken method the spread to biome will now spawn the correct mobs and for mods such as Travellers Titles should now display the right biome.
May need to optimise it further somehow (as well as the actual block spread) but corruption spread is going to be laggy in Minecraft no matter what because of it being 3D, this is why it can be disabled.

--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -69,6 +69,7 @@
   "item.terramine.mimic_spawn_egg": "Mimic Spawn Egg",
   "item.terramine.demon_eye_spawn_egg": "Demon Eye Spawn Egg",
   "item.terramine.eater_of_souls_spawn_egg": "Eater of Souls Spawn Egg",
+  "item.terramine.devourer_spawn_egg": "Devourer Spawn Egg",
   "item.terramine.crimera_spawn_egg": "Crimera Spawn Egg",
   "item.terramine.lens": "Lens",
   "item.terramine.black_lens": "Black Lens",
