Added WTHIT overrides for various blocks. Now you can't tell which chests are trapped as easily!
Improved Devourer, still very wip though.

--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -54,6 +54,11 @@
   "terramine.advancements.chest_slayer.description": "Kill a Mimic",
   "entity.terramine.mimic": "Mimic",
   "entity.terramine.demon_eye": "Demon Eye",
+  "entity.terramine.eater_of_souls": "Eater of Souls",
+  "entity.terramine.devourer": "Devourer",
+  "entity.terramine.devourer_body": "Devourer Body",
+  "entity.terramine.devourer_tail": "Devourer Tail",
+  "entity.terramine.crimera": "Crimera",
   "entity.terramine.falling_star": "Falling Star",
   "entity.terramine.gold_chest": "Gold Chest",
   "entity.terramine.frozen_chest": "Frozen Chest",
