Fixed issue with evil biomes replacing other evil biomes on block spread. Fixed lava not setting player on fire if lava charm type accessory is not equipped. Fixed some possible null pointer exceptions. Optimised all boots code. Updated Korean translation with the other entity names.
Just cleaning up some of my old code, will probably clean up some more later.
I will probably get the Devourer done in the next few days, I don't really like programming entities it would seem.
After the Devourer I'll try to work on a bunch of other stuff and then eventually get around to adding the Eye of Cthulhu and the Eater of Worlds (Should work fairly similarly to the Devourer).

--- a/src/main/resources/assets/terramine/lang/ko_kr.json
+++ b/src/main/resources/assets/terramine/lang/ko_kr.json
@@ -54,6 +54,11 @@
   "terramine.advancements.chest_slayer.description": "미믹을 죽이세요.",
   "entity.terramine.mimic": "미믹",
   "entity.terramine.demon_eye": "데몬 아이",
+  "entity.terramine.eater_of_souls": "영혼을 먹는 자",
+  "entity.terramine.devourer": "포식자",
+  "entity.terramine.devourer_body": "포식자 몸",
+  "entity.terramine.devourer_tail": "포식자 꼬리",
+  "entity.terramine.crimera": "크리메라",
   "entity.terramine.falling_star": "별똥별",
   "entity.terramine.gold_chest": "황금 상자",
   "entity.terramine.frozen_chest": "얼어붙은 상자",
@@ -69,6 +74,7 @@
   "item.terramine.mimic_spawn_egg": "미믹 생성 알",
   "item.terramine.demon_eye_spawn_egg": "데몬 아이 생성 알",
   "item.terramine.eater_of_souls_spawn_egg": "영혼을 먹는 자 생성 알",
+  "item.terramine.devourer_spawn_egg": "포식자 산란 알",
   "item.terramine.crimera_spawn_egg": "크리메라 생성 알",
   "item.terramine.lens": "렌즈",
   "item.terramine.black_lens": "블랙 렌즈",
