Added Sunplate, Cloud, and Rain Cloud blocks. Updated floating islands to use new blocks.
Some small cleanup.

--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -346,7 +346,6 @@
   "item.terramine.demonite_ingot": "Demonite Ingot",
   "item.terramine.raw_crimtane": "Raw Crimtane",
   "item.terramine.crimtane_ingot": "Crimtane Ingot",
-  "block.terramine.tinkerer_workshop": "Tinkerer's Table",
   "block.terramine.gold_chest": "Gold Chest",
   "block.terramine.trapped_gold_chest": "Trapped Gold Chest",
   "block.terramine.frozen_chest": "Frozen Chest",
@@ -363,6 +362,10 @@
   "block.terramine.redstone_stone": "Redstone Stone",
   "block.terramine.redstone_deepslate": "Redstone Deepslate",
   "block.terramine.instant_tnt": "Instant TNT",
+  "block.terramine.tinkerer_workshop": "Tinkerer's Table",
+  "block.terramine.sunplate_block": "Sunplate Block",
+  "block.terramine.cloud": "Cloud",
+  "block.terramine.rain_cloud": "Rain Cloud",
   "block.terramine.blue_brick": "Blue Bricks",
   "block.terramine.cracked_blue_brick": "Cracked Blue Bricks",
   "block.terramine.fancy_blue_brick": "Fancy Blue Bricks",
