--- a/src/main/resources/assets/terramine/lang/ko_kr.json
+++ b/src/main/resources/assets/terramine/lang/ko_kr.json
@@ -74,7 +74,7 @@
   "item.terramine.mimic_spawn_egg": "미믹 생성 알",
   "item.terramine.demon_eye_spawn_egg": "데몬 아이 생성 알",
   "item.terramine.eater_of_souls_spawn_egg": "영혼을 먹는 자 생성 알",
-  "item.terramine.devourer_spawn_egg": "포식자 산란 알",
+  "item.terramine.devourer_spawn_egg": "포식자 생성 알",
   "item.terramine.crimera_spawn_egg": "크리메라 생성 알",
   "item.terramine.lens": "렌즈",
   "item.terramine.black_lens": "블랙 렌즈",
@@ -346,7 +346,6 @@
   "item.terramine.demonite_ingot": "데모나이트 주괴",
   "item.terramine.raw_crimtane": "크림테인 원석",
   "item.terramine.crimtane_ingot": "크림테인 주괴",
-  "block.terramine.tinkerer_workshop": "땜쟁이 작업대",
   "block.terramine.gold_chest": "황금 상자",
   "block.terramine.trapped_gold_chest": "덫이 있는 황금 상자",
   "block.terramine.frozen_chest": "얼어붙은 상자",
@@ -363,6 +362,10 @@
   "block.terramine.redstone_stone": "레드스톤 돌",
   "block.terramine.redstone_deepslate": "레드스톤 심층암",
   "block.terramine.instant_tnt": "인스턴트 TNT",
+  "block.terramine.tinkerer_workshop": "땜쟁이 작업대",
+  "block.terramine.sunplate_block": "선플레이트 블록",
+  "block.terramine.cloud": "구름",
+  "block.terramine.rain_cloud": "비구름",
   "block.terramine.blue_brick": "파란색 벽돌",
   "block.terramine.cracked_blue_brick": "금 간 파란색 벽돌",
   "block.terramine.fancy_blue_brick": "화려한 파란색 벽돌",
