Added Vile and Vicious Mushrooms. Made both cloud types translucent.

--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -375,6 +375,10 @@
   "block.terramine.purple_brick": "Purple Bricks",
   "block.terramine.cracked_purple_brick": "Cracked Purple Bricks",
   "block.terramine.fancy_purple_brick": "Fancy Purple Bricks",
+  "block.terramine.vile_mushroom": "Vile Mushroom",
+  "block.terramine.potted_vile_mushroom": "Potted Vile Mushroom",
+  "block.terramine.vicious_mushroom": "Vicious Mushroom",
+  "block.terramine.potted_vicious_mushroom": "Potted Vicious Mushroom",
   "block.terramine.corrupted_grass": "Corrupted Grass Block",
   "block.terramine.corrupted_gravel": "Corrupted Gravel",
   "block.terramine.corrupted_sand": "Corrupted Sand",
