--- a/src/main/resources/assets/terramine/lang/ko_kr.json
+++ b/src/main/resources/assets/terramine/lang/ko_kr.json
@@ -375,6 +375,10 @@
   "block.terramine.purple_brick": "보라색 벽돌",
   "block.terramine.cracked_purple_brick": "금 간 보라색 벽돌",
   "block.terramine.fancy_purple_brick": "화려한 보라색 벽돌",
+  "block.terramine.vile_mushroom": "썩은 버섯",
+  "block.terramine.potted_vile_mushroom": "화분에 심은 썩은 버섯",
+  "block.terramine.vicious_mushroom": "흉포한 버섯",
+  "block.terramine.potted_vicious_mushroom": "화분에 담긴 사악한 버섯",
   "block.terramine.corrupted_grass": "오염된 잔디",
   "block.terramine.corrupted_gravel": "오염된 자갈",
   "block.terramine.corrupted_sand": "오염된 모래",
