Added Dynamite (still a bit wip, for some reason renders upside down, also want to have spin based on speed).
Also did some organising, not much but some.
I plan to get some throwables, magic weapons, and meteorites added before I release this update.

--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -178,6 +178,7 @@
   "item.terramine.lava_waders": "Lava Waders",
   "item.terramine.water_walking_boots": "Water Walking Boots",
   "item.terramine.obsidian_water_walking_boots": "Obsidian Water Walking Boots",
+  "item.terramine.dynamite": "Dynamite",
   "item.terramine.demonite_pickaxe": "Demonite Pickaxe",
   "item.terramine.demonite_sword": "Demonite Sword",
   "item.terramine.demonite_axe": "Demonite Axe",
@@ -314,6 +315,7 @@
   "item.terramine.lava_waders.tooltip": "Provides the ability to walk on water & lava\nGrants immunity to fire blocks and 7 seconds of immunity to lava\nReduces damage from touching lava",
   "item.terramine.water_walking_boots.tooltip": "Provides the ability to walk on water",
   "item.terramine.obsidian_water_walking_boots.tooltip": "Provides the ability to walk on water\nGrants immunity to fire blocks",
+  "item.terramine.dynamite.tooltip": "A large explosion that will destroy most tiles",
   "item.minecraft.potion.effect.lesser_mana": "Potion of Lesser Mana",
   "item.minecraft.splash_potion.effect.lesser_mana": "Splash Potion of Lesser Mana",
   "item.minecraft.lingering_potion.effect.lesser_mana": "Lingering Potion of Lesser Mana",
