Dynamite works perfectly now. Added Sticky and Bouncy Dynamite.
Actually really fun throwing dynamite, would highly recommend throwing a bunch of bouncy dynamite.

The base is also ready for Grenades and Bombs to be easily made, I'll get the models and textures done for them probably tomorrow and then quickly create the classes needed for them to work.

After this, I want to get the throwing knifes and spiky balls done, which shouldn't be too difficult now that I know how to make throwable projectiles.

Last, I'll try to get the Meteorites done, they will randomly fall on loaded chunks and will create an explosion that generates meteorite ore, this may take a while to figure out, so I may save it for the next update.

I also want to try backport this update to 1.18 since a lot of people still use that version, won't do any earlier versions until the mod is closer to being done.

--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -29,6 +29,7 @@
   "itemGroup.terramine.item_group_armor": "TerraMine Armor",
   "itemGroup.terramine.item_group_accessories": "TerraMine Accessories",
   "itemGroup.terramine.item_group_blocks": "TerraMine Blocks",
+  "itemGroup.terramine.item_group_throwables": "TerraMine Throwables",
   "itemGroup.terramine.item_group_stuff": "TerraMine Misc",
   "terramine.advancements.root.title": "TerraMine",
   "terramine.advancements.root.description": "Familiar yet different",
@@ -60,6 +61,7 @@
   "entity.terramine.devourer_tail": "Devourer Tail",
   "entity.terramine.crimera": "Crimera",
   "entity.terramine.falling_star": "Falling Star",
+  "entity.terramine.dynamite": "Dynamite",
   "entity.terramine.gold_chest": "Gold Chest",
   "entity.terramine.frozen_chest": "Frozen Chest",
   "entity.terramine.ivy_chest": "Ivy Chest",
@@ -179,6 +181,8 @@
   "item.terramine.water_walking_boots": "Water Walking Boots",
   "item.terramine.obsidian_water_walking_boots": "Obsidian Water Walking Boots",
   "item.terramine.dynamite": "Dynamite",
+  "item.terramine.sticky_dynamite": "Sticky Dynamite",
+  "item.terramine.bouncy_dynamite": "Bouncy Dynamite",
   "item.terramine.demonite_pickaxe": "Demonite Pickaxe",
   "item.terramine.demonite_sword": "Demonite Sword",
   "item.terramine.demonite_axe": "Demonite Axe",
@@ -316,6 +320,8 @@
   "item.terramine.water_walking_boots.tooltip": "Provides the ability to walk on water",
   "item.terramine.obsidian_water_walking_boots.tooltip": "Provides the ability to walk on water\nGrants immunity to fire blocks",
   "item.terramine.dynamite.tooltip": "A large explosion that will destroy most tiles",
+  "item.terramine.sticky_dynamite.tooltip": "A large explosion that will destroy most tiles\n'Tossing may be difficult.'",
+  "item.terramine.bouncy_dynamite.tooltip": "A large explosion that will destroy most tiles\n'This will prove to be a terrible idea'",
   "item.minecraft.potion.effect.lesser_mana": "Potion of Lesser Mana",
   "item.minecraft.splash_potion.effect.lesser_mana": "Splash Potion of Lesser Mana",
   "item.minecraft.lingering_potion.effect.lesser_mana": "Lingering Potion of Lesser Mana",
