Grenades done, will do bombs after playing some games.

--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -62,6 +62,7 @@
   "entity.terramine.crimera": "Crimera",
   "entity.terramine.falling_star": "Falling Star",
   "entity.terramine.dynamite": "Dynamite",
+  "entity.terramine.grenade": "Grenade",
   "entity.terramine.gold_chest": "Gold Chest",
   "entity.terramine.frozen_chest": "Frozen Chest",
   "entity.terramine.ivy_chest": "Ivy Chest",
@@ -183,6 +184,9 @@
   "item.terramine.dynamite": "Dynamite",
   "item.terramine.sticky_dynamite": "Sticky Dynamite",
   "item.terramine.bouncy_dynamite": "Bouncy Dynamite",
+  "item.terramine.grenade": "Grenade",
+  "item.terramine.sticky_grenade": "Sticky Grenade",
+  "item.terramine.bouncy_grenade": "Bouncy Grenade",
   "item.terramine.demonite_pickaxe": "Demonite Pickaxe",
   "item.terramine.demonite_sword": "Demonite Sword",
   "item.terramine.demonite_axe": "Demonite Axe",
@@ -322,6 +326,9 @@
   "item.terramine.dynamite.tooltip": "A large explosion that will destroy most tiles",
   "item.terramine.sticky_dynamite.tooltip": "A large explosion that will destroy most tiles\n'Tossing may be difficult.'",
   "item.terramine.bouncy_dynamite.tooltip": "A large explosion that will destroy most tiles\n'This will prove to be a terrible idea'",
+  "item.terramine.grenade.tooltip": "A small explosion that will not destroy tiles",
+  "item.terramine.sticky_grenade.tooltip": "A small explosion that will not destroy tiles\n'Tossing may be difficult.'",
+  "item.terramine.bouncy_grenade.tooltip": "A small explosion that will not destroy tiles\nVery bouncy",
   "item.minecraft.potion.effect.lesser_mana": "Potion of Lesser Mana",
   "item.minecraft.splash_potion.effect.lesser_mana": "Splash Potion of Lesser Mana",
   "item.minecraft.lingering_potion.effect.lesser_mana": "Lingering Potion of Lesser Mana",
