Added Bombs. Added Crimtane ore to Metal Detector.
May do the other throwables next update, I do want to look into how I would do meteorites.

Also, if anyone knows how to give 3d items a 2d gui icon please tell me, fabric doesn't seem to have a built-in thing for this unlike forge, the throwables gui icons look kinda dumb in 3d.

--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -63,6 +63,7 @@
   "entity.terramine.falling_star": "Falling Star",
   "entity.terramine.dynamite": "Dynamite",
   "entity.terramine.grenade": "Grenade",
+  "entity.terramine.bomb": "Bomb",
   "entity.terramine.gold_chest": "Gold Chest",
   "entity.terramine.frozen_chest": "Frozen Chest",
   "entity.terramine.ivy_chest": "Ivy Chest",
@@ -187,6 +188,9 @@
   "item.terramine.grenade": "Grenade",
   "item.terramine.sticky_grenade": "Sticky Grenade",
   "item.terramine.bouncy_grenade": "Bouncy Grenade",
+  "item.terramine.bomb": "Bomb",
+  "item.terramine.sticky_bomb": "Sticky Bomb",
+  "item.terramine.bouncy_bomb": "Bouncy Bomb",
   "item.terramine.demonite_pickaxe": "Demonite Pickaxe",
   "item.terramine.demonite_sword": "Demonite Sword",
   "item.terramine.demonite_axe": "Demonite Axe",
@@ -329,6 +333,9 @@
   "item.terramine.grenade.tooltip": "A small explosion that will not destroy tiles",
   "item.terramine.sticky_grenade.tooltip": "A small explosion that will not destroy tiles\n'Tossing may be difficult.'",
   "item.terramine.bouncy_grenade.tooltip": "A small explosion that will not destroy tiles\nVery bouncy",
+  "item.terramine.bomb.tooltip": "A small explosion that will destroy most tiles",
+  "item.terramine.sticky_bomb.tooltip": "A small explosion that will destroy most tiles\n'Tossing may be difficult.'",
+  "item.terramine.bouncy_bomb.tooltip": "A small explosion that will destroy most tiles\nVery bouncy",
   "item.minecraft.potion.effect.lesser_mana": "Potion of Lesser Mana",
   "item.minecraft.splash_potion.effect.lesser_mana": "Splash Potion of Lesser Mana",
   "item.minecraft.lingering_potion.effect.lesser_mana": "Lingering Potion of Lesser Mana",
