--- a/src/main/resources/assets/terramine/lang/ko_kr.json
+++ b/src/main/resources/assets/terramine/lang/ko_kr.json
@@ -25,11 +25,12 @@
   "terramine.ui.waxingGibbousMoon": "상현달",
   "terramine.ui.unknownMoonPhase": "모양 알 수 없음",
   "terramine.ui.speed": "속도",
-  "itemGroup.terramine.item_group_equipment": "TerraMine Equipment",
-  "itemGroup.terramine.item_group_armor": "TerraMine Armor",
-  "itemGroup.terramine.item_group_accessories": "TerraMine Accessories",
-  "itemGroup.terramine.item_group_blocks": "TerraMine Blocks",
-  "itemGroup.terramine.item_group_stuff": "TerraMine Misc",
+  "itemGroup.terramine.item_group_equipment": "TerraMine 장비",
+  "itemGroup.terramine.item_group_armor": "TerraMine 갑옷",
+  "itemGroup.terramine.item_group_accessories": "TerraMine 액세서리",
+  "itemGroup.terramine.item_group_blocks": "TerraMine 블록",
+  "itemGroup.terramine.item_group_throwables": "TerraMine 투척 가능",
+  "itemGroup.terramine.item_group_stuff": "TerraMine 기타",
   "terramine.advancements.root.title": "TerraMine",
   "terramine.advancements.root.description": "익숙하지만 달라요.",
   "terramine.advancements.accessorise.title": "장신구",
@@ -60,6 +61,9 @@
   "entity.terramine.devourer_tail": "포식자 꼬리",
   "entity.terramine.crimera": "크리메라",
   "entity.terramine.falling_star": "별똥별",
+  "entity.terramine.dynamite": "다이너마이트",
+  "entity.terramine.grenade": "수류탄",
+  "entity.terramine.bomb": "폭탄",
   "entity.terramine.gold_chest": "황금 상자",
   "entity.terramine.frozen_chest": "얼어붙은 상자",
   "entity.terramine.ivy_chest": "아이비 상자",
@@ -178,6 +182,15 @@
   "item.terramine.lava_waders": "용암 장화",
   "item.terramine.water_walking_boots": "수상보행 부츠",
   "item.terramine.obsidian_water_walking_boots": "흑요석 수상보행 부츠",
+  "item.terramine.dynamite": "다이너마이트",
+  "item.terramine.sticky_dynamite": "끈적한 다이너마이트",
+  "item.terramine.bouncy_dynamite": "탄력 다이너마이트",
+  "item.terramine.grenade": "수류탄",
+  "item.terramine.sticky_grenade": "점착 수류탄",
+  "item.terramine.bouncy_grenade": "탄력 수류탄",
+  "item.terramine.bomb": "폭탄",
+  "item.terramine.sticky_bomb": "점착 폭탄",
+  "item.terramine.bouncy_bomb": "탄력 폭탄",
   "item.terramine.demonite_pickaxe": "데모나이트 곡괭이",
   "item.terramine.demonite_sword": "데모나이트 검",
   "item.terramine.demonite_axe": "데모나이트 도끼",
@@ -314,6 +327,15 @@
   "item.terramine.lava_waders.tooltip": "물 & 용암 위를 걸을 수 있는 능력을 얻습니다.\n화염 블록에 대한 내성이 생기며 7초 동안 용암에 대한 내성이 생깁니다.\n용암에 닿을 때 받는 피해가 감소합니다.",
   "item.terramine.water_walking_boots.tooltip": "물 위를 걸을 수 있는 능력을 얻습니다.",
   "item.terramine.obsidian_water_walking_boots.tooltip": "물 위를 걸을 수 있는 능력을 얻습니다.\n화염 블록에 대한 내성이 생깁니다.",
+  "item.terramine.dynamite.tooltip": "대부분의 타일을 파괴하는 큰 폭발",
+  "item.terramine.sticky_dynamite.tooltip": "대부분의 타일을 파괴하는 큰 폭발\n'던지기가 어려울 수 있습니다.'",
+  "item.terramine.bouncy_dynamite.tooltip": "대부분의 타일을 파괴하는 큰 폭발\n'끔찍한 아이디어로 판명될 것'",
+  "item.terramine.grenade.tooltip": "타일을 파괴하지 않는 작은 폭발",
+  "item.terramine.sticky_grenade.tooltip": "타일을 파괴하지 않는 작은 폭발\n'던지기가 어려울 수 있습니다.'",
+  "item.terramine.bouncy_grenade.tooltip": "타일을 파괴하지 않는 작은 폭발\n매우 탄력",
+  "item.terramine.bomb.tooltip": "대부분의 타일을 파괴하는 작은 폭발",
+  "item.terramine.sticky_bomb.tooltip": "대부분의 타일을 파괴하는 작은 폭발\n'던지기가 어려울 수 있습니다.'",
+  "item.terramine.bouncy_bomb.tooltip": "대부분의 타일을 파괴하는 작은 폭발\n매우 탄력",
   "item.minecraft.potion.effect.lesser_mana": "소형 마나 물약",
   "item.minecraft.splash_potion.effect.lesser_mana": "투척용 소형 마나 물약",
   "item.minecraft.lingering_potion.effect.lesser_mana": "잔류형 소형 마나 물약",
